[package]
name = "todoapp"
version = "0.1.0"
edition = "2021"
authors = ["coffeeknife <coffeeknife@proton.me>"]
description = "A first Rust project implementing a simple todo app."
repository = "https://github.com/coffeeknife/todoapp"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
clap = { version = "4.5.23", features = ["derive"] }
chrono = "0.4.39"
include_dir = "0.7.4"
lazy_static = "1.5.0"